🔧 Fix library collapse

--- a/client/src/ui-library/Dropdown/Dropdown.module.scss
+++ b/client/src/ui-library/Dropdown/Dropdown.module.scss
@@ -2,7 +2,7 @@
   @apply relative;
 }
 
-.list {
+.listContainer {
   @apply p-1 absolute bg-neutral-800 rounded shadow-lg shadow-black/[0.5]  z-20;
 
   bottom: 0;
